# Agent_Experiments

./: .gitignore  main.py  pyproject.toml  pyvenv.cfg  requirements.txt
Agentic-LanggraphCrash-course/2-HumanAssistance/: humanintheloop.ipynb
Scripts/: activate  activate.bat  activate.fish
agentic-langgraph/1-BasicChatbot/: chatbot.ipynb
agentic-langgraph/2-HumanAssistance/: humanintheloop.ipynb
data/vector_store/: chroma.sqlite3
mcp-demo-langchain/: client.py  mathserver.py  test.ipynb  weather.py
rag/: 1-rag_evaluation.ipynb  document.ipynb  pdfloader.ipynb
updatedlangchain/: 1-langchainintro.ipynb  2-modelintegration.ipynb  3-tools.ipynb  4-messages.ipynb  5-structuredoutput.ipynb  6-middleware.ipynb  langchain_guardrails.ipynb
vectorless-rag/: PageIndex_Vectorless_RAG.ipynb
